src/snapshots/panko__tests__carriage_return.snap
---
source: src/lib.rs
expression: tokens
---
[
    Word(
        "some",
    ),
    Symbol(
        "_",
    ),
    Word(
        "str",
    ),
    Symbol(
        "\r",
    ),
    Word(
        "some",
    ),
    Symbol(
        "_",
    ),
    Word(
        "another",
    ),
    Symbol(
        "_",
    ),
    Word(
        "str",
    ),
]
