src/snapshots/panko__tests__cyrillic_with_qmark_newline.snap
---
source: src/lib.rs
expression: tokens
---
[
    Word(
        "хлеб",
    ),
    Symbol(
        " ",
    ),
    Word(
        "кто",
    ),
    Symbol(
        " ",
    ),
    Word(
        "булочка",
    ),
    Symbol(
        "?",
    ),
    Newline,
]
