src/snapshots/panko__tests__double_symbol_tail.snap
---
source: src/lib.rs
expression: tokens
---
[
    Word(
        "some",
    ),
    Symbol(
        "_",
    ),
    Word(
        "str",
    ),
    Symbol(
        "»",
    ),
    Symbol(
        "»",
    ),
]
