src/snapshots/panko__tests__emoji_both_sides.snap
---
source: src/lib.rs
expression: tokens
---
[
    Symbol(
        "😀",
    ),
    Word(
        "some",
    ),
    Symbol(
        "_",
    ),
    Word(
        "str",
    ),
    Symbol(
        "😀",
    ),
]
