src/snapshots/panko__tests__space_split.snap
---
source: src/lib.rs
expression: tokens
---
[
    Word(
        "some",
    ),
    Symbol(
        " ",
    ),
    Word(
        "str",
    ),
]
