src/snapshots/panko__tests__underscore_split.snap
---
source: src/lib.rs
expression: tokens
---
[
    Word(
        "some",
    ),
    Symbol(
        "_",
    ),
    Word(
        "string",
    ),
]
